# packetry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  vcpkg.json
.github/workflows/: appimage.yml  rust.yml  test.yml
appimage/: README.md  action.yml
appimage/docker/: Dockerfile
appimage/docker/files/etc/: passwd
appimage/docker/patches/: gtk-4.14.4-gcc-lt-9.patch  gtk-4.14.4-pin-fribidi.patch  gtk-4.14.4-pin-gi-docgen.patch  gtk-4.14.4-pin-libsass.patch  gtk-4.14.4-pin-pango.patch  gtk-4.14.4-pin-sysprof.patch
appimage/packetry.AppDir/usr/share/doc/: LICENSE-adwaita-icon-theme.txt
appimage/packetry.AppDir/usr/share/doc/libgdk-pixbuf-2.0-0/: copyright
appimage/packetry.AppDir/usr/share/doc/libgraphene-1.0-0/: copyright
appimage/packetry.AppDir/usr/share/doc/libgtk-4-1/: copyright
appimage/packetry.AppDir/usr/share/doc/libharfbuzz-gobject0/: copyright
appimage/packetry.AppDir/usr/share/doc/libpango-1.0-0/: copyright
appimage/test/: action.yml
appimage/test/docker/: Dockerfile
assets/: make.sh
derive_macro/: Cargo.toml
derive_macro/src/: lib.rs
docs/: requirements.txt
docs/source/: conf.py  index.rst  introToPacketry.rst  keyboard_shortcuts_linux_windows.rst  keyboard_shortcuts_macos.rst  quick_start.rst  user_interface.rst  what_is_packetry.rst
src/: build.rs  capture.rs  cli.rs  cli_capture.rs  compact_index.rs  data_stream.rs  decoder.rs  devices.rs  event.rs  expander.rs  file.rs  file_vec.rs  filter.rs  fuzzer.rs  hybrid_index.rs  id.rs  index_stream.rs  item.rs  item_widget.rs  lib.rs  loader.rs  main.rs  model.rs  pcap.rs  rcu.rs  record_ui.rs  row_data.rs  stream.rs  test_cynthion.rs  test_replay.rs  testing.rs  tree_list_model.rs  ui.rs  usb.rs  util.rs  vec_map.rs  version.rs
src/backend/: cynthion.rs  ice40usbtrace.rs  luna.rs  mod.rs  transfer_queue.rs
src/database/: compact_index.rs  counter.rs  data_stream.rs  index_stream.rs  mod.rs  stream.rs
src/expander/: imp.rs  mod.rs
src/filter/: and.rs  decision.rs  mod.rs  nak.rs  sof.rs
src/model/: imp.rs  mod.rs
src/row_data/: imp.rs  mod.rs
src/ui/: capture.rs  device.rs  item_connector.rs  item_widget.rs  mod.rs  model.rs  packetry.cmb  packetry.ui  power.rs  record_ui.rs  row_data.rs  settings.rs  test_replay.rs  tree_list_model.rs  view.rs  window.rs
src/util/: dump.rs  id.rs  mod.rs  rcu.rs  vec_map.rs
tests/: tests.txt
tests/address-reuse/: capture.pcap  devices-reference.txt  reference.txt
tests/analyzer-test-bad-cable/: capture.pcap  devices-reference.txt  reference.txt
tests/bad-crcs/: capture.pcap  devices-reference.txt  reference.txt
tests/bad-descriptor-length/: capture.pcap  devices-reference.txt  reference.txt
tests/double-setup/: capture.pcap  devices-reference.txt  reference.txt
tests/emf2022-badge/: capture.pcap  devices-reference.txt  reference.txt
tests/hackrf-connect/: capture.pcap  devices-reference.txt  reference.txt
tests/hackrf-dfu-enum/: capture.pcap  devices-reference.txt  reference.txt
tests/hackrf-restart-failure/: capture.pcap  reference.txt
tests/hid/: tests.txt
tests/hid/amp/: reference.txt
tests/hid/headset/: reference.txt
tests/hid/hub/: reference.txt
tests/hid/keyboard-0/: reference.txt
tests/hid/keyboard-1/: reference.txt
tests/hid/kvm-0/: reference.txt
tests/hid/kvm-1/: reference.txt
tests/hid/mouse/: reference.txt
tests/hid/ps5/: reference.txt
tests/hub/: capture.pcap  devices-reference.txt  reference.txt
tests/iso-ambiguous/: capture.pcap  devices-reference.txt  reference.txt
tests/iso-unambiguous/: capture.pcap  devices-reference.txt  reference.txt
tests/ksolti-core-enum/: capture.pcap  devices-reference.txt  reference.txt
tests/ls-keepalive-divided-transaction/: capture.pcapng  devices-reference.txt  reference.txt
tests/ls-keepalive-more-divided-transactions/: capture.pcapng  devices-reference.txt  reference.txt
tests/mouse/: capture.pcap  devices-reference.txt  reference.txt
tests/split-enum/: capture.pcap  devices-reference.txt  reference.txt
tests/split-nyet/: capture.pcap  reference.txt
tests/split-poll/: capture.pcap  devices-reference.txt  reference.txt
tests/ui/: tests.txt
tests/ui/alt-settings/: actions.json  reference.txt
tests/ui/emf2022-badge/: actions.json  reference.txt
tests/ui/hub/: actions.json  reference.txt
tests/ui/interleaved-miscount/: actions.json  reference.txt
tests/ui/interleaved-miscount-2/: actions.json  reference.txt
tests/ui/mouse-step/: actions.json  reference.txt
tests/ui/split-poll/: actions.json  reference.txt
tests/ui/split-poll-step/: actions.json  reference.txt
wix/: generate_components.py  main.wxs  required-dlls.txt  rust_licenses.py  vcpkg_licenses.py
wix/manual-licenses/: LICENSE-byteorder_slice-3.0.0.txt  LICENSE-dark-light-1.1.1.txt  LICENSE-derive-into-owned-0.2.0.txt  LICENSE-logwise_proc-0.1.1.txt  LICENSE-malloc_buf-0.0.6.txt  LICENSE-merge_derive-0.1.0.txt  LICENSE-ndk-context-0.1.1.txt
