[package]
name = "packetry"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufreaderwriter = "0.1.2"
bytemuck = { version = "1.8.0", features = ["extern_crate_alloc"] }
bytemuck_derive = "1.0.1"
gtk = { version = "*", package = "gtk4" }
num_enum = "0.5.6"
once_cell = "1.5"
pcap-file = "2.0.0"
tempfile = "3.3.0"
thiserror = "1.0.30"
bitfield = "0.13.2"
num-format = "0.4.0"
humansize = "1.1.1"
bisection = "0.1.0"
derive_more = "0.99.17"
rusb = "0.9.1"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
itertools = "0.10.5"
arc-swap = "1.6.0"
lrumap = "0.1.0"
memmap2 = "0.5.8"
page_size = "0.5.0"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[features]
step-decoder = []
record-ui-test = ["serde", "serde_json"]
test-ui-replay = ["serde", "serde_json"]

[[test]]
name = "test_replay"
path = "src/test_replay.rs"
harness = false
required-features = ["test-ui-replay"]
