[package]
name = "packetry"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufreaderwriter = "0.2.4"
bytemuck = { version = "1.14.1", features = ["extern_crate_alloc"] }
bytemuck_derive = "1.5.0"
gtk = { version = "0.8.0", package = "gtk4" }
num_enum = "0.7.2"
once_cell = "1.19.0"
pcap-file = "2.0.0"
tempfile = "3.9.0"
bitfield = "0.14.0"
num-format = "0.4.4"
humansize = "2.1.3"
bisection = "0.1.0"
derive_more = "0.99.17"
nusb = "0.1.9"
futures-lite = "2.0.1"
futures-channel = "0.3.21"
futures-util = "0.3.21"
serde = { version = "1.0.196", optional = true, features = ["derive"] }
serde_json = { version = "1.0.113", optional = true }
itertools = "0.12.1"
arc-swap = "1.6.0"
lrumap = "0.1.0"
memmap2 = "0.9.4"
page_size = "0.6.0"
anyhow = { version = "1.0.79", features = ["backtrace"] }

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
procspawn = "1.0.0"
ctor = "0.2.8"

[features]
step-decoder = []
record-ui-test = ["serde", "serde_json"]
debug-region-map = []
